[package]
name = "pms5003-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-serial = { version = "5.4.4", features = ["codec"] }
bytes = "1.5.0"
futures = "0.3.28"
memmem = "0.1.1"
axum = { version = "0.6.20", features = ["http1", "tokio", "macros"] }
prometheus-client = "0.19.0"
backoff = { version = "0.4.0", features = ["tokio"] }
tap = "1.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
